[package]
name = "queue-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4.17"
notify = "5.0.0"
openssl = "0.10.43"
reqwest = "0.11.13"
serde = "1.0.148"
serde_derive = "1.0.148"
simple_logger = "4.0.0"
toml = "0.5.9"
