[package]
name = "queue-encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
clap = { version = "4.0.27", features = ["derive"] }
data-encoding = "2.3.2"
json = "0.12.4"
log = "0.4.17"
notify = "5.0.0"
openssl = "0.10.43"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
simple_logger = "4.0.0"
toml = "0.5.9"
