[package]
name = "queue-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = { version = "1.0.68", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
log = "0.4.17"
notify = "5.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "multipart"] }
serde = "1.0.152"
serde_derive = "1.0.152"
simple_logger = "4.0.0"
tokio = { version = "1.23.0", features = ["full"] }
warp = "0.3.3"

[[bin]]
name = "test-server"
path = "src/test_server.rs"
